# docs/swagger.yaml
@@ -13,6 +13,10 @@ definitions:
         type: string
       password:
         type: string
+      'role validate:':
+        type: string
+      username:
+        type: string
     type: object
   models.SignUp:
     properties:
@@ -44,7 +48,8 @@ info:
 paths:
   /v1/auth/login:
     post:
-      description: API for user login
+      description: API for user login. For guest user, username is also required.
+        For user, email/username either works
       parameters:
       - description: Login Payload
         in: body
